--- a/index.html
+++ b/index.html
@@ -8,91 +8,47 @@
 </head>
 <body>
     <header>
-        <h1>Mundo das Calopsitas</h1>
-        <p>Seu guia completo para cuidar da sua ave!</p>
+        <div class="hero-content">
+            <h1>Mundo das Calopsitas</h1>
+            <p>Descubra como cuidar, alimentar e amar sua calopsita!</p>
+            <a href="#cuidados" class="hero-button">Comece Agora</a>
+        </div>
     </header>
 
     <nav>
         <a href="#inicio">Início</a>
         <a href="#cuidados">Cuidados</a>
         <a href="#alimentacao">Alimentação</a>
-        <a href="#ambiente">Ambiente</a>
-        <a href="#enriquecimento">Brinquedos</a>
-        <a href="#saude">Saúde</a>
-        <a href="#dicas">Dicas</a>
         <a href="#galeria">Galeria</a>
     </nav>
 
     <section id="inicio">
-        <h2>Início</h2>
-        <p>Seja bem-vindo ao Mundo das Calopsitas! Aqui você encontrará tudo sobre cuidados, alimentação, saúde e curiosidades sobre essas aves encantadoras.</p>
+        <h2>Bem-vindo!</h2>
+        <p>Conheça tudo sobre o universo das calopsitas: alimentação, cuidados e curiosidades.</p>
     </section>
 
     <section id="cuidados">
         <h2>Cuidados Básicos</h2>
         <ul>
-            <li>Escolha da gaiola ideal</li>
-            <li>Tempo de voo livre diário</li>
-            <li>Higiene e limpeza</li>
-            <li>Cuidados na troca de penas</li>
+            <li>Gaiola espaçosa e confortável</li>
+            <li>Voo livre diário</li>
+            <li>Limpeza e higiene</li>
+            <li>Tempo de interação</li>
         </ul>
     </section>
 
     <section id="alimentacao">
-        <h2>Alimentação</h2>
+        <h2>Alimentação Saudável</h2>
         <ul>
-            <li>Ração extrusada</li>
-            <li>Frutas seguras: maçã, mamão, melancia</li>
-            <li>Verduras: couve, almeirão, espinafre</li>
-            <li>Evitar: chocolate, abacate, cafeína, sal e açúcar</li>
+            <li>Ração balanceada</li>
+            <li>Frutas e verduras seguras</li>
+            <li>Evitar alimentos tóxicos</li>
         </ul>
-    </section>
-
-    <section id="ambiente">
-        <h2>Ambiente Ideal</h2>
-        <ul>
-            <li>Sem correntes de ar</li>
-            <li>Boa iluminação natural</li>
-            <li>Brinquedos e poleiros variados</li>
-            <li>Ambiente livre de fumaça e perfumes fortes</li>
-        </ul>
-    </section>
-
-    <section id="enriquecimento">
-        <h2>Enriquecimento e Brinquedos</h2>
-        <ul>
-            <li>Brinquedos de madeira</li>
-            <li>Corda para escalada</li>
-            <li>Espelhos (uso moderado)</li>
-            <li>Brinquedos interativos com petiscos</li>
-        </ul>
-    </section>
-
-    <section id="saude">
-        <h2>Saúde e Bem-Estar</h2>
-        <p>Fique atento a sinais de problemas de saúde:</p>
-        <ul>
-            <li>Penas arrepiadas</li>
-            <li>Falta de apetite</li>
-            <li>Sonolência excessiva</li>
-            <li>Respiração ofegante</li>
-        </ul>
-        <p>Em caso de dúvida, procure um veterinário especializado em aves.</p>
-    </section>
-
-    <section id="dicas">
-        <h2>Dicas e Curiosidades</h2>
-        <ul>
-            <li>Calopsitas podem aprender a assobiar músicas</li>
-            <li>Algumas conseguem falar palavras simples</li>
-            <li>Expectativa de vida: 15 a 20 anos</li>
-        </ul>
-        <button onclick="showMoreInfo()">Clique para saber uma curiosidade extra!</button>
     </section>
 
     <section id="galeria">
-        <h2>Galeria de Fotos</h2>
-        <p>Envie a foto da sua calopsita para contato@mundodascalopsitas.com e participe da nossa galeria!</p>
+        <h2>Galeria de Fofuras</h2>
+        <p>Envie uma foto da sua calopsita para contato@mundodascalopsitas.com</p>
     </section>
 
     <script src="script.js"></script>
